--- a/server/.env.example
+++ b/server/.env.example
@@ -18,3 +18,4 @@ PROGRESSDB_ENCRYPTION_KEY=000000000000000000000000000000000000000000000000000000
 # Optional path to YAML config file
 # PROGRESSDB_CONFIG=./config.yaml
 
+OPENAI_API_KEY=”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”
