--- a/clients/sdk/backend/nodejs/package.json
+++ b/clients/sdk/backend/nodejs/package.json
@@ -6,11 +6,21 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "prepublishOnly": "npm run build",
+    "prepare": "npm run build",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Run your tests\""
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE*"
+  ],
   "keywords": ["progressdb","sdk","backend","typescript"],
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "typescript": "^5.0.0"
   }
