--- a/clients/sdk/backend/nodejs/tsconfig.json
+++ b/clients/sdk/backend/nodejs/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
+    "lib": ["ES2020", "DOM"],
     "declaration": true,
     "outDir": "dist",
     "strict": true,
@@ -11,4 +12,3 @@
   },
   "include": ["src/**/*"]
 }
-
