--- a/clients/sdk/backend/python/pyproject.toml
+++ b/clients/sdk/backend/python/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "progressdb-sdk"
+name = "progressdb"
 version = "0.1.0"
 description = "ProgressDB backend Python SDK"
 readme = "README.md"
@@ -13,4 +13,3 @@ license = { text = "MIT" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
-
