--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build Release
+name: Build and Release
 
 on:
   push:
@@ -7,11 +7,16 @@ on:
 
 jobs:
   build:
+    name: Build binaries
     runs-on: ubuntu-latest
     strategy:
       matrix:
         goos: [linux, darwin, windows]
         goarch: [amd64, arm64]
+    outputs:
+      version: ${{ steps.vars.outputs.VERSION }}
+      commit: ${{ steps.vars.outputs.COMMIT }}
+      builddate: ${{ steps.vars.outputs.BUILDDATE }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -38,26 +43,45 @@ jobs:
           set -euo pipefail
           GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} scripts/build.sh OUT=dist/progressdb-${{ steps.vars.outputs.VERSION }}-${{ matrix.goos }}-${{ matrix.goarch }}
 
-      - name: Package artifact
-        if: matrix.goos == 'windows'
+      - name: Package artifacts
         run: |
+          set -euo pipefail
           pushd dist
-          zip -9 progressdb-${{ steps.vars.outputs.VERSION }}-${{ matrix.goos }}-${{ matrix.goarch }}.zip progressdb-${{ steps.vars.outputs.VERSION }}-${{ matrix.goos }}-${{ matrix.goarch }}
+          for f in *${{ steps.vars.outputs.VERSION }}*; do
+            if [ -f "$f" ]; then
+              if [[ "$f" == *.exe ]]; then
+                zip -9 "${f}.zip" "$f"
+              else
+                tar -czf "${f}.tar.gz" "$f"
+              fi
+            fi
+          done
           popd
 
-      - name: Create release (once)
-        if: ${{ matrix.goos == 'linux' && matrix.goarch == 'amd64' }}
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: progressdb-binaries
+          path: dist/**
+
+  release:
+    name: Create GitHub Release and attach artifacts
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: progressdb-binaries
+          path: dist
+
+      - name: Create GitHub Release and upload assets
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
+          files: dist/**
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload release artifact
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/progressdb-${{ steps.vars.outputs.VERSION }}-${{ matrix.goos }}-${{ matrix.goarch }}
-          asset_name: progressdb-${{ steps.vars.outputs.VERSION }}-${{ matrix.goos }}-${{ matrix.goarch }}
-          asset_content_type: application/octet-stream
-
