--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,7 +4,8 @@ project_name: progressdb
 
 builds:
   - id: progressdb
-    main: ./server/cmd/progressdb
+    dir: ./server
+    main: ./cmd/progressdb
     binary: progressdb
     goos:
       - linux
