--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -64,41 +64,49 @@ dockers:
     image_templates:
       - "ghcr.io/ha-sante/progressdb:{{ .Tag }}-amd64"
       - "ghcr.io/ha-sante/progressdb:{{ .Version }}-amd64"
-    dockerfile: Dockerfile
+    dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
       - "--platform=linux/amd64"
+    ids:
+      - progressdb
 
   - id: ghcr_arm64
     image_templates:
       - "ghcr.io/ha-sante/progressdb:{{ .Tag }}-arm64"
       - "ghcr.io/ha-sante/progressdb:{{ .Version }}-arm64"
-    dockerfile: Dockerfile
+    dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
       - "--platform=linux/arm64"
+    ids:
+      - progressdb
 
   - id: dockerhub_amd64
     image_templates:
       - "docker.io/ha-sante/progressdb:{{ .Tag }}-amd64"
       - "docker.io/ha-sante/progressdb:{{ .Version }}-amd64"
-    dockerfile: Dockerfile
+    dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
       - "--platform=linux/amd64"
+    ids:
+      - progressdb
 
   - id: dockerhub_arm64
     image_templates:
       - "docker.io/ha-sante/progressdb:{{ .Tag }}-arm64"
       - "docker.io/ha-sante/progressdb:{{ .Version }}-arm64"
-    dockerfile: Dockerfile
+    dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
       - "--platform=linux/arm64"
+    ids:
+      - progressdb
 
 docker_manifests:
   - name_template: "ghcr.io/ha-sante/progressdb:{{ .Tag }}"
