fix - actions fix

--- a/.github/workflows/react-compat.yml
+++ b/.github/workflows/react-compat.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   react-compat:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: clients/sdk/frontend/reactjs
     strategy:
       fail-fast: false
       matrix:
@@ -26,7 +29,6 @@ jobs:
           cache: 'npm'
 
       - name: Install reactjs package deps
-        working-directory: clients/sdk/frontend/reactjs
         run: |
           if [ -f package-lock.json ]; then
             npm ci
@@ -35,18 +37,15 @@ jobs:
           fi
 
       - name: Install React ${{ matrix.react-version }} in reactjs package
-        working-directory: clients/sdk/frontend/reactjs
         run: |
           npm install react@${{ matrix.react-version }} react-dom@${{ matrix.react-version }} --no-save
           # Align @types/react for TS build (install 18+ types for modern React)
           npm install --no-save --save-dev @types/react@^18 || true
 
       - name: Build reactjs SDK
-        working-directory: clients/sdk/frontend/reactjs
         run: npm run build
 
       - name: Optional smoke test (noop if none)
-        working-directory: clients/sdk/frontend/reactjs
         run: |
           if [ -f package.json ] && npm run -s test; then
             npm test
