--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -25,6 +25,7 @@ security:
     use: false
     fields: []
   kms:
+    mode: "embedded" # or external
     socket: "/tmp/progressdb-kms.sock"
     data_dir: "./kms-data"
     binary: "/usr/local/bin/kms"
