refac - kms system

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -26,7 +26,7 @@ security:
     fields: []
   kms:
     mode: "embedded" # or external
-    socket: "127.0.0.1:6820" # host:port for HTTP or a unix socket path starting with '/'
+    endpoint: "127.0.0.1:6820" # host:port for HTTP (e.g. 127.0.0.1:6820) or full URL
     data_dir: "./kms-data"
     binary: "/usr/local/bin/progressdb-kms"
     master_key_file: ""
