tests - for node sdk

--- a/clients/sdk/backend/nodejs/package.json
+++ b/clients/sdk/backend/nodejs/package.json
@@ -9,19 +9,28 @@
     "prepublishOnly": "npm run build",
     "prepare": "npm run build",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Run your tests\""
+    "test": "vitest",
+    "test:unit": "vitest --dir tests/unit",
+    "test:integration": "vitest --dir tests/integration"
   },
   "files": [
     "dist",
     "README.md",
     "LICENSE*"
   ],
-  "keywords": ["progressdb","sdk","backend","typescript"],
+  "keywords": [
+    "progressdb",
+    "sdk",
+    "backend",
+    "typescript"
+  ],
   "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "msw": "^1.2.1",
+    "typescript": "^5.0.0",
+    "vitest": "^1.6.1"
   }
 }
