--- a/clients/sdk/frontend/typescript/package.json
+++ b/clients/sdk/frontend/typescript/package.json
@@ -8,13 +8,18 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "clean": "rm -rf dist",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "vitest",
+    "test:unit": "vitest --dir tests/unit",
+    "test:integration": "vitest --dir tests/integration"
   },
   "files": ["dist"],
   "keywords": ["progressdb","sdk","frontend"],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^1.0.0",
+    "msw": "^1.2.1"
   }
 }
